<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_marginHorizontal="20dp"
    >

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="89dp"
        android:enabled="false"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/sign_up"
        android:textSize="20sp" />




</RelativeLayout>